--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         </div>  <!-- close navbar links class -->
     </nav>  <!-- close navbar class-->
     
+    
 </body>
+
+<script type="text/javascript" src="script.js"></script>
 </html>
 
